# nomad-coder-lectures

./: App.js  Loading.js  README.md  Weather.js  index.html  jobs.csv  main.py  next.config.js  package-lock.json  package.json  pyproject.toml
components/: NavBar.js  Seo.js
css/: styles.css
graphql/: db.js  resolvers.js  schema.graphql
js/: app.js
nomad-apollo-2021/: package-lock.json
nomad-apollo-2021/public/: index.html
nomad-graphql-2021/: package-lock.json  package.json
nomad-graphql-2021/graphql/: db.js
nomad-js-painting-canvas/: README.md  index.html
nomad-js-painting-canvas/js/: app.js
nomad-next-movie-app/: next.config.js
nomad-next-movie-app/components/: Layout.js
nomad-next-movie-app/pages/: 404.js  _app.js  about.js  index.js
nomad-nextjs/: package.json
nomad-nextjs/pages/: _app.js  about.js  index.js
nomad-python-scrapper/: indeed.py
nomad-react-hooks/useConfirm/: useConfirm.js
nomad-react-hooks/useInput/: index.js
nomad-react-hooks/usePreventLeave/: usePreventLeave.js
nomad-react-native/: Loading.js  README.md  Weather.js
nomad-scrapper-practice/: exporter.py  pyproject.toml  scrapper.py
nomad-typescript/: README.md  package.json
pages/: _app.js  index.js
public/: index.html
src/: apollo.js  index.html  index.js  index.ts  store.js
templates/: index.html  report.html
useClick/: index.js  useClick.js
useFadeIn/: useFadeIn.js
useFullscreen/: useFullscreen.js
useHover/: index.js  useHover.js
useNetwork/: useNetwork.js
useNotification/: useNotification.js
useTabs/: index.js
useTitle/: index.js
(+14 files in other folders)
